Bug 95071 - [bisected] Wrong colors in KDE/Qt applications
Summary: [bisected] Wrong colors in KDE/Qt applications
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Other (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: mesa-dev
QA Contact: mesa-dev
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-04-22 16:27 UTC by Daniel Scharrer
Modified: 2016-04-25 10:32 UTC (History)
4 users (show)

See Also:
i915 platform:
i915 features:


Attachments
possible fix (2.49 KB, patch)
2016-04-24 10:23 UTC, Marek Olšák
Details | Splinter Review
More wrong colours in more places (5.05 KB, image/png)
2016-04-24 11:34 UTC, Kai
Details
Taskbar with correct colours (5.06 KB, image/png)
2016-04-24 11:35 UTC, Kai
Details

Description Daniel Scharrer 2016-04-22 16:27:22 UTC
Since Mesa commit ccdcf91104a5f07127b5b8d8570b5c4bbcf86647 most KDE or Qt applications display with their red and blue color channels swapped. The only unaffected Qt windows seem to be those with an alpha channel (Konsole, Plasma). GTK applications do not seem to be affected.

All affected windows use visual 0x3f5:
0x3f5 24 tc  0  24  0 r  y .   8  8  8  0 .  .  0  0  0  0  0  0  0  0 0 None

This happens with and without compositing. It also does not matter which Mesa version is used by the application itself - as long as the X server was started with a broken Mesa version installed, the color channels are swapped.

GPU: Radeon R9 380X (tonga)
Mesa 11.3.0-devel (git-1883613)
LLVM r266988
X Server: git-16e4bce (1.17.4 is also affected)
DDX: xf86-video-amdgpu git-b930067
Comment 1 Nick Sarnie 2016-04-23 16:16:11 UTC
Thanks for tracking this down Daniel, I was loosing my mind.

Same issue here on Radeon 7950/TAHITI with mesa/xserver git. Reverting that commit fixes it.

Thanks,
sarnex
Comment 2 Kai 2016-04-23 19:15:08 UTC
While most windows seem ok for me, I see funny colours especially with kpinentry windows. But maybe all others use an alpha channel, haven't checked that.

CCing reviewers of that commit for some visibility. Can't seem to find Rob (the author) in the Bugzilla data base. Will Cc him by e-mail.
Comment 3 Marek Olšák 2016-04-24 10:23:53 UTC
Created attachment 123198 [details] [review]
possible fix

Could you please try this patch?
Comment 4 Kai 2016-04-24 11:34:29 UTC
Created attachment 123200 [details]
More wrong colours in more places

(In reply to Marek Olšák from comment #3)
> Created attachment 123198 [details] [review] [review]
> possible fix
> 
> Could you please try this patch?

I've tested it with the stack detailed below and this is worse than without the patch (see attached screenshot, I'll attach one without your patch as well), now the taskbar shows the switched colours as well. I restarted X/SDDM to make sure everything was using the new library versions.

The following stack (Debian testing as a base) was used:
GPU: Hawaii PRO [Radeon R9 290] (ChipID = 0x67b1)
Mesa: Git:master/147a2d25ad
libdrm: 2.4.67-1
LLVM: SVN:trunk/r267209 (3.9 devel)
X.Org: 2:1.18.3-1
Linux: 4.5.1
Firmware: firmware-amd-graphics/20160110-1
libclc: Git:master/20d977a3e6
DDX: 1:7.7.0-1

Let me know, if you need something else.
Comment 5 Kai 2016-04-24 11:35:37 UTC
Created attachment 123201 [details]
Taskbar with correct colours

The attached image shows the taskbar without the patch (again, after a restart of X/SDDM).
Comment 6 Marek Olšák 2016-04-24 13:17:54 UTC
Closing. I've revert the problematic commit.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.