st/dri: fix format translation from a visual to a pipe format

Look at the red mask.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=95071